--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -787,6 +787,9 @@
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ publicaciones borradas";
 
+/* Alert text shown when max group size is reached when selecting/adding group members */
+"new.group.members.max.size.alert" = "El tamaño máximo de grupo es %d";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Ya no formas parte de este grupo";
 
