--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -787,6 +787,9 @@
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ posts verwijderd";
 
+/* Alert text shown when max group size is reached when selecting/adding group members */
+"new.group.members.max.size.alert" = "De maximale groepsgrootte is %d";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Je bent geen deelnemer meer van deze groep";
 
