--- a/Halloapp/de.lproj/InfoPlist.strings
+++ b/Halloapp/de.lproj/InfoPlist.strings
@@ -5,7 +5,7 @@
 "NSCameraUsageDescription" = "Du kannst damit Fotos und Videos direkt aus HalloApp heraus aufnehmen.";
 
 /* Privacy - Contacts Usage Description */
-"NSContactsUsageDescription" = "Um die Beiträge deiner Freunde zu sehen, und sie auch deine sehen zu lassen, lade deine Kontakte auf die HalloApp-Server hoch.";
+"NSContactsUsageDescription" = "Lade deine Kontakte auf die HalloApp-Server hoch, um die Beiträge deiner Freunde zu sehen, und sie auch deine sehen zu lassen.";
 
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Du kannst damit Videos mit Ton aufnehmen.";
