--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -4,8 +4,14 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Periksa apakah Anda tersambung ke internet, lalu coba lagi.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Tambah";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Batal";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "BATAL";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Lanjut";
@@ -58,6 +64,9 @@
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Anda ditambahkan ke grup baru";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Cari";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Pelajari lebih banyak";
 
@@ -81,6 +90,12 @@
 
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
+
+/* Title for the new comment notification. */
+"notification.new.comment" = "Komentar Baru";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ sekarang di HalloApp";
 
 /* Content for friend notification. */
 "notification.new.friend.content" = "%@ kini ada di HalloApp";
