--- a/Share Extension/id.lproj/Localizable.strings
+++ b/Share Extension/id.lproj/Localizable.strings
@@ -4,8 +4,14 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Periksa apakah Anda tersambung ke internet, lalu coba lagi.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Tambah";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Batal";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "BATAL";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Lanjut";
@@ -55,6 +61,9 @@
 /* Title for generic delete button. */
 "Delete" = "Hapus";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Cari";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Pelajari lebih banyak";
 
@@ -81,6 +90,9 @@
 
 /* Composer title when sharing to feed */
 "share.composer.title.feed" = "Pos Baru";
+
+/* Alert dialog message shown when uploading fails. */
+"share.composer.uploading.fail.message" = "Silakan coba lagi nanti.";
 
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Gagal mengunggah";
